# unlock-youtube

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.scss  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BackButton.tsx  MainNavBar.tsx  Select.tsx  SettingsItem.tsx  SettingsNavBar.tsx  ToggleButton.tsx  index.ts
src/pages/: MainPage.tsx  SettingsPage.tsx  index.ts
src/services/language/: en.ts  index.ts  ru.ts
src/services/store/: index.ts
src/services/theme/: index.ts
src/store/: index.ts
src/types/: index.ts
